<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/six"
    android:orientation="vertical"

    tools:context="com.example.eric.academytutorialapp.MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:gravity="center"
        android:textColor="@color/sky_blue"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:text="@string/greeting_message"

        />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:text="@string/prompt"


        />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/enter_name"
        android:hint="@string/enter_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"

        />

    <Button
    android:text="@string/mainScreenButtonText"
    android:onClick="onButtonClicked"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellow"/>

    <Button
        android:text="Click to view Image"
        android:onClick="onViewImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky_blue"/>

    <Button

        android:text="@string/formButton"
        android:onClick="onViewFormButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/purple"
        android:textColor="@color/white"

        />

    <Button
        android:onClick="onViewImageGrid"
        android:text="@string/imageGrid"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/red"
        />

    </LinearLayout>
    </ScrollView>
