<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context="com.example.eric.academytutorialapp.FormActivity">

    <TextView

        android:text="Welcome to the Form Page"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_weight="1" />


    <TextView
        android:id="@+id/nameField"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/name"
        android:textSize="30dp"

        android:layout_weight="1" />

    <EditText
        android:id="@+id/name_hint"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/name_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/ageField"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/age"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30dp"

        android:layout_weight="1" />

    <EditText
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:hint="@string/age_hint"
        android:id="@+id/age_hint"
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_weight="1" />

    <TextView
        android:id="@+id/emailField"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/email"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/white"

        android:layout_weight="1" />

    <EditText
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:inputType="textWebEmailAddress"
        android:id="@+id/email_hint"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/phoneField"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/phone"
        android:textSize="30dp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@color/white"

        android:layout_weight="1" />

    <EditText
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:hint="@string/phone_hint"
        android:id="@+id/phone_hint"
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <Button
        android:text="Click to submit form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@color/yellow"
        android:onClick="onSubmitPressed"
        android:layout_weight="1" />


</LinearLayout>
</ScrollView>
